[tool.poetry]
name = "cmslogin"
version = "0.1.0"
description = "logs in to the cms vpn using 1password cli"
authors = ["Ryan Delaney <ryan@truss.works>"]

[tool.poetry.dependencies]
python = "^3.7"
pexpect = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "19.10b0"
isort = {version = "^4.3.21", extras = ["pyproject"]}
flake8 = "^3.7.9"
flake8-assertive = "^1.2.1"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.2"
flake8-comprehensions = "^3.2.2"
flake8-eradicate = "^0.3.0"
flake8-fixme = "^1.1.1"
flake8-pyi = "^19.3.0"
mypy = "^0.770"

[tool.black]
line-length = 79
target_version = ["py37"]

[tool.isort]
[tool.poetry.scripts]
cmslogin = 'cmslogin.cmslogin:main'

[settings]
combine_star = true
include_trailing_comma = true
indent='    '
known_first_party = []
known_third_party = ["pexpect"]
length_sort = false
line_length = 79
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
